--- a/projects/rpc/build.xml
+++ b/projects/rpc/build.xml
@@ -221,7 +221,7 @@
 	    </condition>
 
 		<!-- Call asdoc to generate dita xml files -->
-		<asdoc output="${FLEX_HOME}/tempDoc" lenient="true" failonerror="true" keep-xml="true" skip-xsl="true" >
+		<asdoc output="${FLEX_HOME}/tempDoc" lenient="true" failonerror="true" keep-xml="true" skip-xsl="true" fork="true">
 		    <compiler.source-path path-element="${basedir}/src"/>
 		    <doc-classes class="RPCClasses"/>
 		    <doc-namespaces uri="http://www.adobe.com/2006/mxml"/>
