--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -57,6 +57,7 @@
 			<include-namespaces uri="library:adobe/flex/gumbo"/>
 			<include-classes>Flex4Classes</include-classes>
 			<source-path path-element="${basedir}/src"/>
+			<library-path />
 			<external-library-path dir="${FLEX_HOME}/frameworks/libs">
                 <include name="player/${playerglobal.version}/playerglobal.swc"/>
 				<include name="framework.swc"/>
