Transferred from the Adobe Open Source Subversion Repository
Revision: 2514
Author:   jspiro@adobe.com
Date:     2008-07-16T21:38:06.038319Z

Log Message: 
-----------
frameworks: Fixing injection I made ages ago in build.xmls for framework projects
* all the projects should have been building against player 9's playerglobal.swc, not player 10's (except for flex4.swc)
* this might fix compiling problems that developed in tests for air
* problem was that <property/>s in ant are immutable and don't fire a warning if you redeclare them with a different value. I thought I was overriding the global ${playerglobal.version} property in files that needed to make it 9 instead of 10
* solution: created global.playerglobal.version (which is 10) and in files that need to "override" it, I declare local.playerglobal.version locally.

Reviewer: Pete
Bugs: n/a
QA: Please retest air compiling problems. We should probably re-run everything, since we're going back to the correct playerglobal, stuff might get fixed, stuff shouldn't (but could) get broken.
Doc: No

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/airframework/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/utilities/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flash-integration/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/build.properties</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build_framework.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/rpc/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/haloclassic/build.xml</path>

git-svn-id: https://s

--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -59,7 +59,7 @@
 			<source-path path-element="${basedir}/src"/>
 			<library-path />
 			<external-library-path dir="${FLEX_HOME}/frameworks/libs">
-                <include name="player/${playerglobal.version}/playerglobal.swc"/>
+                <include name="player/${global.playerglobal.version}/playerglobal.swc"/>
 				<include name="framework.swc"/>
                 <include name="text_edit.swc"/>
                 <include name="text_flex.swc"/>
