Transferred from the Adobe Open Source Subversion Repository
Revision: 3248
Author:   gosmith@adobe.com
Date:     2008-09-17T22:58:26.587163Z

Log Message: 
-----------
Updated to TCAL build 173. (Note: I did NOT update the players.)

The three TCAL SWCS used by Flex 4 are now named tcal_core.swc, tcal_conversion.swc, and tcal_edit.swc.

All TCAL APIs are now in a package named flashx.tcal. We are using flashx to indicate important APIs that are considered to extend the Flash platform but which live below application frameworks such as Flex.

On TextFlow, a new 'displayController' property replaces the old 'container' and 'controller' properties.

When importing, you use importToFlow() rather than importFromString() or importFromXML.

Reviewer: N/A
Bugs: -
QA: No
Doc: No

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/graphics/Parser.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/graphics/graphicsClasses/TextFlowComposer.as</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/libs/text_importExport.swc</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/mxml-2009-manifest.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/component/TextInput.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/build.xml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/libs/tcal_conversion.swc</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/libs/tcal_edit.swc</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/libs/text_edit.swc</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/events/TextOperationEvent.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/libs/tcal_core.swc</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/flex/component/TextArea.as</path>
<path kind="fil

--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -61,10 +61,9 @@
 			<external-library-path dir="${FLEX_HOME}/frameworks/libs">
                 <include name="player/${global.playerglobal.version}/playerglobal.swc"/>
 				<include name="framework.swc"/>
-                <include name="text_edit.swc"/>
-                <include name="text_flex.swc"/>
-                <include name="text_importExport.swc"/>
-                <include name="text_model.swc"/>
+                <include name="tcal_conversion.swc"/>
+                <include name="tcal_core.swc"/>
+                <include name="tcal_edit.swc"/>
 			</external-library-path>
 			<include-file name="version.properties" path="${FLEX_HOME}/frameworks/version.properties"/>
 			<include-file name="defaults.css" path="${basedir}/defaults.css"/>
