Transferred from the Adobe Open Source Subversion Repository
Revision: 3573
Author:   pfarland@adobe.com
Date:     2008-10-10T19:34:21.354660Z

Log Message: 
-----------
Removing the halo and gumbo library namespaces and merging all applicable tags into MXML 2009.

Note that in MXML 2009, the filters tags <BevelFilter>, <BlurFilter>, <ColorMatrixFilter>, <ConvolutionFilter>, <DisplacementMapFilter>, <DropShadowFilter>, <DropShadowFilter>, <GlowFilter>, <GradientBevelFilter> and <GradientGlowFilter> map to their new mx.filters.* implementation (which include FXG support). To use the MXML 2006 flash.filters.* based tags in MXML 2009, they would need to be qualified in a custom flash.filters.* package namespace in order to be used as tags.

QA: Yes, please replace all usages of "library:adobe/flex/gumbo" and "library:adobe/flex/halo" with "http://ns.adobe.com/mxml/2009".
Docs: Yes, if we have documented the library specific namespaces, please replace them with the new MXML 2009 namespace. Our MXML 2009 spec will be updated to reflect these changes too.
Bugs: SDK-17051
Checkintests: Pass
Reviewer: Deepa

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/tests/graphics/GraphicTags_checkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/samples/explorer/explorer.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/flex-config.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/tests/states/statefulNodes.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/development/eclipse/flex/flex4test/src/NewEffects.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/development/eclipse/flex/flex4/.actionScriptProperties</path>
<path kind="file" action="M">/flex/sdk/trunk/development/eclipse/flex/flex4test/src/AddItemsTest.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/tests/graphics/comps/TextGraphicBasic1.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/development/ecli

--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -52,9 +52,8 @@
 			   output="${FLEX_HOME}/frameworks/libs/flex4.swc"
 			   resource-bundle-list="${basedir}/bundles.properties">
 			<jvmarg line="${compc.jvm.args}"/>
-			<namespace uri="library:adobe/flex/gumbo" manifest="${basedir}/manifest.xml"/>
-		    <namespace uri="http://ns.adobe.com/mxml/2009" manifest="${FLEX_HOME}/frameworks/mxml-2009-manifest.xml"/>
-			<include-namespaces uri="library:adobe/flex/gumbo"/>
+			<namespace uri="http://ns.adobe.com/mxml/2009" manifest="${basedir}/manifest.xml"/>
+			<include-namespaces uri="http://ns.adobe.com/mxml/2009"/>
 			<include-classes>Flex4Classes</include-classes>
 			<source-path path-element="${basedir}/src"/>
 			<library-path />
@@ -68,10 +67,10 @@
 			<include-file name="version.properties" path="${FLEX_HOME}/frameworks/version.properties"/>
 			<include-file name="defaults.css" path="${basedir}/defaults.css"/>
 			<locale/>
-                        <keep-as3-metadata name="SkinPart"/>
-                        <keep-as3-metadata name="States"/>
-                        <keep-as3-metadata name="SkinStates"/>
-                        <keep-as3-metadata name="HostComponent"/>
+            <keep-as3-metadata name="SkinPart"/>
+            <keep-as3-metadata name="States"/>
+            <keep-as3-metadata name="SkinStates"/>
+            <keep-as3-metadata name="HostComponent"/>
 			<accessible>true</accessible>
 		</compc>
 		<delete file="${FLEX_HOME}/frameworks/version.properties"/>
