Transferred from the Adobe Open Source Subversion Repository
Revision: 3598
Author:   gauravj@adobe.com
Date:     2008-10-13T20:32:58.581561Z

Log Message: 
-----------
Modifying the build files to update the swcs with dita based asdoc xml files. 
The dita xml files should go under the docs folder inside the swc.

QA: No
Doc: No
Tests: checkintests

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/airframework/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/utilities/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flash-integration/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/rpc/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/haloclassic/build.xml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274755 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -14,10 +14,10 @@
 <project name="graphics" default="main" basedir=".">
 
 	<property name="FLEX_HOME" location="${basedir}/../../.."/>
-	
+
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,compile" description="Clean build of flex4.swc"/>
+	<target name="main" depends="clean,compile,doc" description="Clean build of flex4.swc"/>
 
 	<target name="clean">
 		<delete failonerror="false">
@@ -75,7 +75,29 @@
 		</compc>
 		<delete file="${FLEX_HOME}/frameworks/version.properties"/>
 	</target>
-	
+
+
+	<target name="doc" depends="clean-temp-docs" description="updates flex4.swc with asdoc xml">
+
+		<!-- Call asdoc to generate dita xml files -->
+		<exec executable="${FLEX_HOME}/bin/asdoc.exe" failonerror="true">
+			<arg line="-doc-classes Flex4Classes -doc-namespaces http://ns.adobe.com/mxml/2009 -namespace http://ns.adobe.com/mxml/2009 ${basedir}/manifest.xml -sp ${basedir}/src -keep-xml=true -skip-xsl=true -output ${FLEX_HOME}/tempDoc"/>
+		</exec>
+
+		<!-- updates flex4.swc with asdoc xml -->
+		<zip destfile="${FLEX_HOME}/frameworks/libs/flex4.swc" update="true">
+		    <zipfileset dir="${FLEX_HOME}/tempDoc/tempdita" prefix="docs">
+			    <include name="*.*"/>
+				<exclude name="ASDoc_Config.xml"/>
+				<exclude name="overviews.xml"/>
+		    </zipfileset>
+		</zip>
+	</target>
+
+	<target name="clean-temp-docs">
+		<delete dir="${FLEX_HOME}/tempDoc" failonerror="false" includeEmptyDirs="true"/>
+	</target>
+
 </project>
 
 
