--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -12,7 +12,6 @@
 -->
 
 <project name="graphics" default="main" basedir=".">
-
 	<property name="FLEX_HOME" location="${basedir}/../../.."/>
 
 	<property file="${FLEX_HOME}/build.properties"/>
@@ -76,11 +75,22 @@
 		<delete file="${FLEX_HOME}/frameworks/version.properties"/>
 	</target>
 
+    <condition property="asdocexe" value="asdoc.exe">
+        <os family="windows"/>
+    </condition>
+
+    <condition property="asdocexe" value="asdoc">
+        <os family="unix"/>
+    </condition>
+
+    <condition property="asdocexe" value="asdoc">
+        <os family="mac"/>
+    </condition>
 
 	<target name="doc" depends="clean-temp-docs" description="updates flex4.swc with asdoc xml">
 
 		<!-- Call asdoc to generate dita xml files -->
-		<exec executable="${FLEX_HOME}/bin/asdoc.exe" failonerror="true">
+		<exec executable="${FLEX_HOME}/bin/${asdocexe}" failonerror="true">
 			<arg line="-doc-classes Flex4Classes -doc-namespaces http://ns.adobe.com/mxml/2009 -namespace http://ns.adobe.com/mxml/2009 ${basedir}/manifest.xml -sp ${basedir}/src -keep-xml=true -skip-xsl=true -output ${FLEX_HOME}/tempDoc"/>
 		</exec>
 
