--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -59,9 +59,9 @@
 			<external-library-path dir="${FLEX_HOME}/frameworks/libs">
                 <include name="player/${global.playerglobal.version}/playerglobal.swc"/>
 				<include name="framework.swc"/>
-                <include name="tcal_conversion.swc"/>
-                <include name="tcal_core.swc"/>
-                <include name="tcal_edit.swc"/>
+                <include name="textLayout_conversion.swc"/>
+                <include name="textLayout_core.swc"/>
+                <include name="textLayout_edit.swc"/>
 			</external-library-path>
 			<include-file name="version.properties" path="${FLEX_HOME}/frameworks/version.properties"/>
 			<include-file name="defaults.css" path="${basedir}/defaults.css"/>
