--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -75,24 +75,18 @@
 		<delete file="${FLEX_HOME}/frameworks/version.properties"/>
 	</target>
 
-    <condition property="asdocexe" value="asdoc.exe">
-        <os family="windows"/>
-    </condition>
-
-    <condition property="asdocexe" value="asdoc">
-        <os family="unix"/>
-    </condition>
-
-    <condition property="asdocexe" value="asdoc">
-        <os family="mac"/>
-    </condition>
-
 	<target name="doc" depends="clean-temp-docs" description="updates flex4.swc with asdoc xml">
+		<!-- Load the <asdoc> task. We can't do this at the <project> level -->
+		<!-- because targets that run before flexTasks.jar gets built would fail. -->
+		<taskdef resource="flexTasks.tasks" classpath="${FLEX_HOME}/lib/flexTasks.jar"/>
 
 		<!-- Call asdoc to generate dita xml files -->
-		<exec executable="${FLEX_HOME}/bin/${asdocexe}" failonerror="true">
-			<arg line="-doc-classes Flex4Classes -lenient=true -doc-namespaces http://ns.adobe.com/mxml/2009 -namespace http://ns.adobe.com/mxml/2009 ${basedir}/manifest.xml -sp ${basedir}/src -keep-xml=true -skip-xsl=true -output ${FLEX_HOME}/tempDoc"/>
-		</exec>
+		<asdoc output="${FLEX_HOME}/tempDoc" lenient="true" failonerror="true" keep-xml="true" skip-xsl="true" >
+		    <compiler.source-path path-element="${basedir}/src"/>
+		    <doc-classes class="Flex4Classes"/>
+		    <doc-namespaces uri="http://ns.adobe.com/mxml/2009"/>
+		    <namespace uri="http://ns.adobe.com/mxml/2009" manifest="${basedir}/manifest.xml"/>
+		</asdoc>
 
 		<!-- updates flex4.swc with asdoc xml -->
 		<zip destfile="${FLEX_HOME}/frameworks/libs/flex4.swc" update="true">
