Transferred from the Adobe Open Source Subversion Repository
Revision: 4036
Author:   gauravj@adobe.com
Date:     2008-11-07T01:34:54.403490Z

Log Message: 
-----------
Updating build files to pass jvmargs to the asdoc task.

QE Notes: None
Doc Notes: None 
tests: checkintests

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/airframework/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/utilities/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flash-integration/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/wireframe/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/rpc/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/haloclassic/build.xml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274763 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -86,6 +86,7 @@
 		    <doc-classes class="Flex4Classes"/>
 		    <doc-namespaces uri="http://ns.adobe.com/mxml/2009"/>
 		    <namespace uri="http://ns.adobe.com/mxml/2009" manifest="${basedir}/manifest.xml"/>
+		    <jvmarg line="${compc.jvm.args}"/>
 		</asdoc>
 
 		<!-- updates flex4.swc with asdoc xml -->
