--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -80,13 +80,25 @@
 		<!-- because targets that run before flexTasks.jar gets built would fail. -->
 		<taskdef resource="flexTasks.tasks" classpath="${FLEX_HOME}/lib/flexTasks.jar"/>
 
+	    <condition property="asdoc.jvm.args" value="-Xmx384m">
+	        <os family="windows"/>
+	    </condition>
+
+	    <condition property="asdoc.jvm.args" value="-Xmx512m">
+	        <os family="mac"/>
+	    </condition>
+
+	    <condition property="asdoc.jvm.args" value="-Xmx512m">
+	        <os family="unix"/>
+	    </condition>
+
 		<!-- Call asdoc to generate dita xml files -->
 		<asdoc output="${FLEX_HOME}/tempDoc" lenient="true" failonerror="true" keep-xml="true" skip-xsl="true" >
 		    <compiler.source-path path-element="${basedir}/src"/>
 		    <doc-classes class="Flex4Classes"/>
 		    <doc-namespaces uri="http://ns.adobe.com/mxml/2009"/>
 		    <namespace uri="http://ns.adobe.com/mxml/2009" manifest="${basedir}/manifest.xml"/>
-		    <jvmarg line="${compc.jvm.args}"/>
+		    <jvmarg line="${asdoc.jvm.args}"/>
 		</asdoc>
 
 		<!-- updates flex4.swc with asdoc xml -->
