Transferred from the Adobe Open Source Subversion Repository
Revision: 4724
Author:   rfrishbe@adobe.com
Date:     2009-01-29T02:13:02.210369Z

Log Message: 
-----------
Bunch of small changes:

build scripts..just minor fixes and making it player 10

FxComponent - required parts must be present--not just defined

FxContainer - removing some dead code around IUIComponent since everything should be an IVisualElement now

Group - move around logic for removing a previously parented object.  This helps deal with graphic elements with shared display objects

GraphicElement - need to handle display object getting changed as well

ArrayList/ListCollectionView - add addAll() and addAllAt()

AdvancedLayoutFeatures - remove Vector import (now that build scripts are fixed, it works fine)

QE Notes: Write tests for addAll() and allAllAt(), check that required parts are required in the first state
Doc Notes: None
Bugs: SDK-18536, SDK-18745, SDK-18709, SDK-18189, SDK-18537
Reviewer: Evtim
tests: checkintests, mustella DataGroup, List, Group, FxContainer, FxDataContainer

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/utilities/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/src/mx/collections/ListCollectionView.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flash-integration/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/baseClasses/FxComponent.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/Group.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/src/mx/collections/ArrayList.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/FxContainer.as</path>
<path kind="file" action="M">/flex/sdk

--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -11,7 +11,7 @@
 
 -->
 
-<project name="graphics" default="main" basedir=".">
+<project name="flex4" default="main" basedir=".">
 	<property name="FLEX_HOME" location="${basedir}/../../.."/>
 
 	<property file="${FLEX_HOME}/build.properties"/>
