--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -86,7 +86,7 @@
 		<compc fork="true"
 			   output="${FLEX_HOME}/frameworks/locale/${locale}/flex4_rb.swc"
 			   locale="${locale}">
-            
+
             <target-player>10</target-player>
 			<jvmarg line="${compc.jvm.args}"/>
  			<include-resource-bundles bundle="components"/>
@@ -130,7 +130,7 @@
 	    </condition>
 
 		<!-- Call asdoc to generate dita xml files -->
-		<asdoc output="${FLEX_HOME}/tempDoc" lenient="true" failonerror="true" keep-xml="true" skip-xsl="true" >
+		<asdoc output="${FLEX_HOME}/tempDoc" lenient="true" failonerror="true" keep-xml="true" skip-xsl="true" fork="true">
 		    <compiler.source-path path-element="${basedir}/src"/>
 		    <doc-classes class="Flex4Classes"/>
 		    <doc-namespaces uri="http://ns.adobe.com/mxml/2009"/>
