Transferred from the Adobe Open Source Subversion Repository
Revision: 5272
Author:   jimurphy@adobe.com
Date:     2009-03-12T20:08:41.306700Z

Log Message: 
-----------
Bugs: sdk-19825, sdk-19824
-integrated TLF build 391.  
-Removed textLayout_conversion.swc,textLayout_core.swc, textLayout_edit.swc and textLayout_textField.swc.  These have been replaced with textLayout.swc
-created new "in" directory tlf.  This is where I will integrate the TLF rsls.  These are now being pre-built for us
-Removed call to build TLF.swc in frameworks/build.xml
-Removed references to the removed TLF swc's in flex4/build.xml and wireframe/build.xml

Bugs: sdk-15437 , sdk-19821
-updated the packaged frameworks/build.xml to rebuild: flex4,wireframe,sparkskins and halo
-fixed the airframework target so the frameworks/build.xml does not error out

qa: yes. check that when rebuilding the swc's in the framework that they are built correctly
checkintests: pass

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/libs/textLayout_core.swc</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/libs/textLayout_textField.swc</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/libs/textLayout.swc</path>
<path kind="file" action="A">/flex/sdk/trunk/in/tlf/textLayout_391.swf</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/wireframe/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build_framework.xml</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/libs/textLayout_conversion.swc</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/libs/textLayout_edit.swc</path>
<path kind="dir" action="A">/flex/sdk/trunk/in/tlf</path>
<path kind="file" action="A">/flex/sdk/

--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -63,9 +63,7 @@
 			<external-library-path dir="${FLEX_HOME}/frameworks/libs">
                 <include name="player/${global.playerglobal.version}/playerglobal.swc"/>
 				<include name="framework.swc"/>
-                <include name="textLayout_conversion.swc"/>
-                <include name="textLayout_core.swc"/>
-                <include name="textLayout_edit.swc"/>
+                <include name="textLayout.swc"/>
                 <include name="videoPlayer.swc"/>
 			</external-library-path>
 			<include-file name="version.properties" path="${FLEX_HOME}/frameworks/version.properties"/>
