--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -64,6 +64,7 @@
                 <include name="player/${global.playerglobal.version}/playerglobal.swc"/>
 				<include name="framework.swc"/>
                 <include name="textLayout.swc"/>
+				<include name="textLayout_textField.swc"/>
                 <include name="videoPlayer.swc"/>
 			</external-library-path>
 			<include-file name="version.properties" path="${FLEX_HOME}/frameworks/version.properties"/>
