--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -55,8 +55,8 @@
 			   output="${FLEX_HOME}/frameworks/libs/flex4.swc"
 			   resource-bundle-list="${basedir}/bundles.properties">
 			<jvmarg line="${compc.jvm.args}"/>
-			<namespace uri="http://ns.adobe.com/mxml/2009" manifest="${basedir}/manifest.xml"/>
-			<include-namespaces uri="http://ns.adobe.com/mxml/2009"/>
+			<namespace uri="library://ns.adobe.com/flex/spark" manifest="${basedir}/manifest.xml"/>
+			<include-namespaces uri="library://ns.adobe.com/flex/spark"/>
 			<include-classes>Flex4Classes</include-classes>
 			<source-path path-element="${basedir}/src"/>
 			<library-path />
@@ -68,6 +68,7 @@
 			</external-library-path>
 			<include-file name="version.properties" path="${FLEX_HOME}/frameworks/version.properties"/>
 			<include-file name="defaults.css" path="${basedir}/defaults.css"/>
+			<include-file name="defaults-3.0.0.css" path="${basedir}/defaults-3.0.0.css"/>
 			<locale/>
             <keep-as3-metadata name="SkinPart"/>
 			<accessible>true</accessible>
