Transferred from the Adobe Open Source Subversion Repository
Revision: 5546
Author:   gauravj@adobe.com
Date:     2009-03-25T19:29:16.161130Z

Log Message: 
-----------
Fix build.

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/airframework/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/build.xml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274774 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -133,8 +133,8 @@
 		<asdoc output="${FLEX_HOME}/tempDoc" lenient="true" failonerror="true" keep-xml="true" skip-xsl="true" fork="true">
 		    <compiler.source-path path-element="${basedir}/src"/>
 		    <doc-classes class="Flex4Classes"/>
-		    <doc-namespaces uri="http://ns.adobe.com/mxml/2009"/>
-		    <namespace uri="http://ns.adobe.com/mxml/2009" manifest="${basedir}/manifest.xml"/>
+		    <doc-namespaces uri="library://ns.adobe.com/flex/spark"/>
+			<namespace uri="library://ns.adobe.com/flex/spark" manifest="${basedir}/manifest.xml"/>
 		    <jvmarg line="${asdoc.jvm.args}"/>
 		</asdoc>
 
