Transferred from the Adobe Open Source Subversion Repository
Revision: 6076
Author:   jimurphy@adobe.com
Date:     2009-04-09T15:17:03.743326Z

Log Message: 
-----------
removed the ide setup target I put into frameworks/build.xml that copies the spark and halo manifests to the flex4 and framework directories.  A prepare target now exists in each of these directories and also added to the clean target to get rid of the manifest file.

qa: no
doc: no
checkintests: pass

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/build.xml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274776 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -20,7 +20,10 @@
 
 	<target name="clean">
 		<delete failonerror="false">
-			<fileset file="${basedir}/bundles.properties"/>
+			<fileset dir="${basedir}" >
+				<include name="bundles.properties"/>
+				<include name="manifest.xml"/>
+			</fileset>
 			<fileset dir="${FLEX_HOME}/frameworks/libs">
 				<include name="flex4.swc"/>
 				<include name="graphics.swc"/>
@@ -32,8 +35,12 @@
 			</fileset>
 		</delete>
 	</target>
-
-	<target name="compile" description="Compiles flex4.swc">
+	
+	<target name="prepare" description="Copies manifests to project directories so the IDE can find them">
+		<copy file="${FLEX_HOME}/frameworks/spark-manifest.xml" tofile="${basedir}/manifest.xml" overwrite="true"/>
+	</target>
+	
+	<target name="compile" depends="prepare" description="Compiles flex4.swc">
 		<echo file="${FLEX_HOME}/frameworks/version.properties" append="false">build=${build.number}</echo>
 		<echo message="Compiling frameworks/libs/flex4.swc"/>
 		<!-- Load the <compc> task. We can't do this at the <project> level -->
